ahh semmi sme müködik, egy led világit és annyi....

--- a/.project
+++ b/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>MPRT220416-BASIC.FW</name>
+	<name>MPRT220416-LED_STRIP.FW</name>
 	<comment></comment>
 	<projects>
 	</projects>
