--- a/.cproject
+++ b/.cproject
@@ -47,7 +47,7 @@
 									<listOptionValue builtIn="false" value="../Drivers/CMSIS/Device/ST/STM32F1xx/Include"/>
 									<listOptionValue builtIn="false" value="../Drivers/CMSIS/Include"/>
 									<listOptionValue builtIn="false" value="../Drivers/LED"/>
-									<listOptionValue builtIn="false" value="../Drivers/gfx"/>
+									<listOptionValue builtIn="false" value="../Drivers/ssd1306"/>
 									<listOptionValue builtIn="false" value="../Drivers/common"/>
 									<listOptionValue builtIn="false" value="../Drivers/ws2812b"/>
 								</option>
